--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@ body {
 }
 
 .logo {
-    margin: 3em;
+    margin: 2em;
     width: 25%;
 }
 
@@ -52,11 +52,18 @@ body {
 section h1 {
     color: var(--primary);
     text-align: center;
-    margin-top: 1em;
 }
 
 section p {
     width: 80%;
+}
+
+.craft-img {
+    min-width: 100px;
+    width: 100%;
+    max-width: 300px;
+    margin: .5em;
+    margin-top: 1.5em;
 }
 
 .section-canvas button {
