--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,8 @@ body {
 }
 @media (min-width: 600px) {
     ::-webkit-scrollbar {
-        width: 2px;
-        height: 2px;
+        width: 8px;
+        height: 8px;
     }
      
     ::-webkit-scrollbar-track {
@@ -54,7 +54,7 @@ body {
 .logo {
     margin: 0.5em;
     width: 80%;
-    max-width: 180px;
+    max-width: 150px;
 }
 
 .sub-logo {
@@ -92,8 +92,7 @@ section a.btn {
 
 .craft-img {
     min-width: 100px;
-    width: 100%;
-    max-width: 300px;
+    width: 80%;
     margin: .5em;
     margin-top: 1.5em;
 }
@@ -160,6 +159,7 @@ ul.horizontal-slide li {
     background-repeat: no-repeat;
     background-size: 50% auto;
     background-position: center;
+    opacity: 0.5;
 }
 
 .cabelo-class-1 {
