--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,13 @@ body {
         background-size: 50em auto;
     }
 }
+
+@media (max-width: 500px) {
+    .navbar-nav-back {
+        background-color: #f8f9fa;
+    }
+}
+
 @media (min-width: 600px) {
     ::-webkit-scrollbar {
         width: 8px;
