--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,10 +139,15 @@ section p {
     left: 16px;
     font-size: 1.3em;
     background-color: #0d6efda6;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .check-button span {
     font-size: .7em;
+    margin-left: 5px;
 }
 
 .x-button {
@@ -150,11 +155,18 @@ section p {
     bottom: -80px;
     right: 16px;
     font-size: 1.3em;
-    background-color: #0d6efda6;
+    border-style: outset;
+    border-color: #0d6efda6;
+    border-width: medium;
+    color: #0d6efd;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .x-button span {
     font-size: .7em;
+    margin-left: 5px;
 }
 
 /* BOTÕES DE AÇÃO NA TELA CELULAR */
@@ -164,7 +176,6 @@ section p {
         max-width: 45vw;
         height: 40px;
         top: 85vh;
-        background-color: #0d6efda6;
         font-size: 1.2em;
     }
     
@@ -173,7 +184,6 @@ section p {
         max-width: 45vw;
         height: 40px;
         top: 85vh;
-        background-color: #0d6efda6;
         font-size: 1.2em;
     }
 }
@@ -185,7 +195,6 @@ section p {
         max-width: 45vw;
         height: 40px;
         top: 85vh;
-        background-color: #0d6efda6;
         font-size: 1.2em;
     }
     
@@ -194,7 +203,6 @@ section p {
         max-width: 45vw;
         height: 40px;
         top: 85vh;
-        background-color: #0d6efda6;
         font-size: 1.2em;
     }
 }
