--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@ body {
     background: url(../img/waves2.svg);
     background-repeat: no-repeat;
     background-size: 100% auto;
+    background-color: lightyellow;
 }
 
 @media (max-width: 800px) {
@@ -208,13 +209,13 @@ section p {
 }
 
 /* SELEÇÃO DE COR */
-.menu-cor img{
+/* .menu-cor img{
     width: 15%;
     height: 15%;
     position: absolute;
     bottom: 8px;
     left: 16px;
-}
+} */
 
 .menu-create {
     padding: 2%;
@@ -238,8 +239,6 @@ section p {
     background: #33333350;
 }
 
-
-
 .box-elements {
     text-align: center;
     margin-top: 5%;
@@ -248,6 +247,8 @@ section p {
 .element-craft {
     width: 50px;
     height: 50px;
+    background-color: rgba(231, 199, 17, 0.2);
+    border-radius: 20%;
 }
 
 ul.horizontal-slide {
@@ -261,7 +262,7 @@ ul.horizontal-slide li {
 }     
 
 .element-craft.login-required {
-    background-color: #cacaca80;
+    background-color: #9e1f1f80;
     background-image: url(../img/ico/star.png);
     background-repeat: no-repeat;
     background-size: 50% auto;
